[package]
name = "mdbook-manmunge"
description = "mdBook pre- and post-processor to help munge (a subset of) the Topiary Book into manpages with mdbook-man"
version = "0.0.1"
readme = "README.md"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

# Don't publish this as part of a Topiary release
publish = false

[[bin]]
name = "mdbook-manmunge"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true
mdbook = { workspace = true, default-features = false }
pulldown-cmark-to-cmark.workspace = true
pulldown-cmark.workspace = true
semver.workspace = true
serde_json.workspace = true
url.workspace = true
